--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -35,11 +35,10 @@
                 </div>
             </div>
         </div>
-            <div class="form-outline row" >
-                <button class="button_login btn btn-lg float-end">로그인</button>
-            </div>
+        <div class="form-outline row" >
+          <button class="button_login btn btn-lg float-end">로그인</button>
         <p class="text-end container-sm login_list">
-            <a style="opacity: 30%; font-size: 18px" class="list">
+            <a style="opacity: 30%; font-size: 18px" class="list" href="/user/findPw.do">
                 비밀번호 찾기 |&nbsp;
             </a>
             <a style="opacity: 30%; font-size: 18px" class="list" href="/user/findId.do">
@@ -49,6 +48,7 @@
                 회원가입
             </a>
         </p>
+      </div>
     </form>
 
 </div>
@@ -97,7 +97,7 @@
     .login_list {
         position: fixed;
         bottom: 23%;
-        right: 42.5%;
+        right: 44rem;
     }
     .list {
         color: #2c3034;
