재연이다시병합완료

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,24 +3,25 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-  <meta charset="UTF-8">
-  <title>ChapChapService</title>
-  <link rel="stylesheet" href="/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/webjars/bootstrap-icons/1.10.3/font/bootstrap-icons.css">
-  <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4ikx943fco&submodules=geocoder"></script>
+    <meta charset="UTF-8">
+    <title>ChapChapService</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap-icons/1.10.3/font/bootstrap-icons.css">
+    <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript"
+            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4ikx943fco&submodules=geocoder"></script>
 </head>
 <!-- storelist-main 스타일은 store/list.html에서 사용중이니 지우지말것 -->
 <body class="storelist-main" style="background: #FFFAED;">
-<header th:replace="/headerNav"></header>
-<main class="container storelist-main">
-  <th:block layout:fragment="content"></th:block>
-</main>
+    <header th:replace="/headerNav"></header>
+    <main class="container storelist-main">
+        <th:block layout:fragment="content"></th:block>
+    </main>
 
-<script>
-  //툴팁생성
-  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-  const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-</script>
+    <script>
+        //툴팁생성
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
 </body>
 </html>
