--- a/src/main/resources/templates/store/list.html
+++ b/src/main/resources/templates/store/list.html
@@ -10,11 +10,10 @@
             margin: 0 !important;
             padding: 0 !important;
             max-width: 100vw;
-        /* 적용안되는것처럼 보이지만 적용되는 가게리스트 전용 스타일 */
+            /* 적용안되는것처럼 보이지만 적용되는 가게리스트 전용 스타일 */
         }
     </style>
 </head>
-
 <body>
 <div layout:fragment="content">
     <div class="d-flex">
@@ -26,7 +25,6 @@
                     <div class="d-flex flex-row">
                         <h5 class="ms-1 me-1">필터</h5>
                         <h5 class="ms-1 me-1"><i class="bi bi-funnel-fill"></i></h5>
-                        <button class="btn btn-outline-secondary btn-sm ms-1 me-1" style="height: 30px;">검색</button>
                     </div>
                     <!-- 메뉴 종류 -->
                     <div class="mb-2 d-flex" style="width: 90%;">
@@ -36,10 +34,34 @@
                             </button>
                             <!-- 디자인 수정 필요한 부분 -->
                             <ul class="dropdown-menu" aria-labelledby="menuType">
-                                <li><a class="dropdown-item" href="#">한식</a></li>
-                                <li><a class="dropdown-item" href="#">일식</a></li>
-                                <li><a class="dropdown-item" href="#">중식</a></li>
+                                <li><a class="dropdown-item" href="#">혼밥</a></li>
+                                <li><a class="dropdown-item" href="#">족발</a></li>
+                                <li><a class="dropdown-item" href="#">보쌈</a></li>
+                                <li><a class="dropdown-item" href="#">치킨</a></li>
+                                <li><a class="dropdown-item" href="#">고기</a></li>
                                 <li><a class="dropdown-item" href="#">양식</a></li>
+                                <li><a class="dropdown-item" href="#">백반</a></li>
+                                <li><a class="dropdown-item" href="#">일식</a></li>
+                                <li><a class="dropdown-item" href="#">회</a></li>
+                                <li><a class="dropdown-item" href="#">중식</a></li>
+                                <li><a class="dropdown-item" href="#">아시안</a></li>
+                                <li><a class="dropdown-item" href="#">패스트푸드</a></li>
+                                <li><a class="dropdown-item" href="#">찜</a></li>
+                                <li><a class="dropdown-item" href="#">해물</a></li>
+                                <li><a class="dropdown-item" href="#">고기</a></li>
+                                <li><a class="dropdown-item" href="#">돈까스</a></li>
+                                <li><a class="dropdown-item" href="#">탕,찌개</a></li>
+                                <li><a class="dropdown-item" href="#">국수</a></li>
+                                <li><a class="dropdown-item" href="#">분식</a></li>
+                                <li><a class="dropdown-item" href="#">호프집</a></li>
+                                <li><a class="dropdown-item" href="#">바</a></li>
+                                <li><a class="dropdown-item" href="#">이자카야</a></li>
+                                <li><a class="dropdown-item" href="#">포차</a></li>
+                                <li><a class="dropdown-item" href="#">와인바</a></li>
+                                <li><a class="dropdown-item" href="#">커피전문점</a></li>
+                                <li><a class="dropdown-item" href="#">디저트카페</a></li>
+                                <li><a class="dropdown-item" href="#">차전문점</a></li>
+                                <li><a class="dropdown-item" href="#">베이커리카페</a></li>
                             </ul>
                         </div>
                     </div>
@@ -71,15 +93,18 @@
                         <button type="button" class="btn btn-outline-secondary btn-sm p-0 me-1 ms-1" style="width:50px;">가능</button>
                         <button type="button" class="btn btn-outline-secondary btn-sm p-0 me-1 ms-1" style="width:50px;">불가능</button>
                     </div>
+                    <!-- 필터 검색 버튼 -->
+                    <button class="btn btn-outline-secondary btn-sm mt-2" style="width:90%; height: 30px;">검색</button>
                 </div>
                 <!-- 정렬 부분 -->
                 <div class="d-flex flex-column justify-content-center align-items-center" style="flex: 1;">
                     <h5>정렬</h5>
-                    <div class="d-flex flex-column">
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 mt-0" id="distance" style="height: 30px;">거리순</button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="rating" style="height: 30px;">별점순</button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="review" style="height: 30px;">리뷰개수순</button>
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="likes" style="height: 30px;">찜순</button>
+                    <div class="d-flex flex-column" name="order">
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 mt-0" id="distance" style="height: 30px;">거리순<i class="bi bi-arrow-down-up"></i></button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="rating" style="height: 30px;">별점순<i class="bi bi-arrow-down-up"></i></button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 pe-1 ps-1" id="review" style="height: 30px;">리뷰개수순<i class="bi bi-arrow-down-up"></i></button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="likes" style="height: 30px;">찜순<i class="bi bi-arrow-down-up"></i></button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 mb-0" id="" style="height: 30px;">정렬<i class="bi bi-arrow-down-up"></i></button>
                     </div>
                 </div>
             </div>
@@ -120,8 +145,8 @@
         </div>
         <!-- 지도 -->
         <div class="col-8"
-                id="map"
-                style="height: calc(100vh - 91px);"></div>
+             id="map"
+             style="height: calc(100vh - 91px);"></div>
         <script>
             var mapOptions = {
                 center: new naver.maps.LatLng(37.3595704, 127.105399),
