--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -44,31 +44,54 @@
     <a class="btn btn-outline-dark btn-sm" th:href="${s.blogurl}">블로그</a>
   </div>
   <div class="store">
-    <div class="storeDetail">
-      <span th:text="${s.storeType.typeByStore.mainCategory}"></span>
-      <span><i class="bi bi-dot m-0"></i></span>
-      <span th:text="${s.storeType.typeByStore.subCategory}"></span>
-      <p th:text="${s.address}"></p>
-      <details>
-        <summary>영업시간</summary>
-        <p th:text="'영업시간 : '+${s.opentime}"></p>
-        <p>브레이크 타임</p>
-        <div th:each="bt:${s.breaktimes}" class="d-flex">
-          <i class="bi bi-dot m-0"></i>
-          <p th:text="${bt.restStartTime}+'~'+${bt.restStartTime}"></p>
+    <ul class="list-group">
+      <li class="list-group-item">
+        <span th:text="${s.storeType.typeByStore.mainCategory}"></span>
+        <span><i class="bi bi-dot m-0"></i></span>
+        <span th:text="${s.storeType.typeByStore.subCategory}"></span>
+      </li>
+      <li class="list-group-item p-0">
+        <div class="accordion-item">
+          <div class="accordion-header d-flex" id="flush-headingOne" style="padding: 8px 16px;">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              <p class="m-0 me-auto" th:text="'영업시간 '+${s.opentime}"></p>
+            </button>
+            <i class="bi bi-chevron-down"></i>
+          </div>
+          <div id="flush-collapseOne" class="accordion-collapse collapse mt-1" style="background-color: #FFE3A9; padding: 8px 16px;" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div th:each="h:${s.holiday}" th:if="${h.regular==1}">
+              <p th:text="'정규 휴일 : '+${h.week}"></p>
+            </div>
+            <div th:each="h:${s.holiday}" th:unless="${h.regular==1}">
+              <p th:text="'비정규 휴일 : '+${#dates.format(h.date,'yyyy-MM-dd')}"></p>
+            </div>
+            <p>브레이크 타임</p>
+            <div th:each="bt:${s.breaktimes}" class="d-flex">
+              <i class="bi bi-dot m-0"></i>
+              <p th:text="${bt.restStartTime}+'~'+${bt.restStartTime}"></p>
+            </div>
+            <p th:text="'주문 마감시간 : '+${s.lastorder}"></p>
+            <p th:text="'웨이팅 마감시간 : '+${s.waitingClosetime}"></p>
+          </div>
         </div>
-        <p th:text="'주문 마감시간 : '+${s.lastorder}"></p>
-        <p th:text="'웨이팅 마감시간 : '+${s.waitingClosetime}"></p>
-      </details>
-      <p th:text="${s.storeCall.storeCall}"></p>
-      <span th:if="${s.parking}">주차가능</span>
-      <span th:if="${s.wifi}">와이파이 </span>
-      <span th:if="${s.toilet}">화장실 </span>
-      <span th:if="${s.smokingroom}">흡연실 </span>
-      <span th:if="${s.babychair}">아기의자 </span>
-      <p th:text="${s.tvshow}"></p>
-      <p th:text="${s.detailInfo}"></p>
-    </div>
+      </li>
+      <li class="list-group-item">
+        <p th:text="${s.storeCall.storeCall}"></p>
+      </li>
+      <li class="list-group-item">
+        <span th:if="${s.parking}">주차가능</span>
+        <span th:if="${s.wifi}">와이파이 </span>
+        <span th:if="${s.toilet}">화장실 </span>
+        <span th:if="${s.smokingroom}">흡연실 </span>
+        <span th:if="${s.babychair}">아기의자 </span>
+      </li>
+      <li class="list-group-item" th:if="${s.tvshow}">
+        <p th:text="${s.tvshow}"></p>
+      </li>
+      <li class="list-group-item">
+        <p th:text="${s.detailInfo}"></p>
+      </li>
+    </ul>
   </div>
   <nav class="navbar sticky-top bg-light">
     <div class="container-fluid d-flex justify-content-center">
@@ -157,7 +180,9 @@
       <div class="card" th:classappend="${iter.index >= 3} ? 'hide' : ''">
         <div class="card-header d-flex justify-content-between">
           <div class="d-flex">
-            <img th:src="${r.userInfo.profileImg}" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px" >
+            <a th:href="'http://localhost:9090/user/'+${r.userInfo.userId}+'/detail.do'">
+              <img th:src="${r.userInfo.profileImg}" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px; cursor: pointer;" >
+            </a>
             <div>
               <div class="d-flex">
                 <p class="user-name" th:text="${r.userInfo.nickname}"></p>
