--- a/src/main/resources/static/csstest/userDetailCss.css
+++ b/src/main/resources/static/csstest/userDetailCss.css
@@ -111,7 +111,7 @@
 
 .userDetailContainer{
     border: 1px solid black;
-    width: 800px;
+    width: 700px;
     height: 50vh;
     overflow-y: auto;
 }
@@ -121,4 +121,54 @@
 #sharelink:hover{
     cursor: pointer;
     color: #0b5ed7;
+}
+
+.img-containerbox2{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    overflow: hidden;
+    cursor: pointer;
+    border: 1px solid black;
+}
+.img-containerbox2 img{
+    width: 50px;
+    height: 50px;
+    object-fit: fill;
+}
+.starRating{
+    border: 1px solid black;
+    height: 25px;
+    border-radius: 12.5px;
+    width: 70px;
+    text-align: center;
+}
+.review-text{
+    width: 400px;
+    height: 110px;
+    border:1px solid black;
+    /*margin-left: 5px;*/
+    /*margin-top: 0px;*/
+    /*margin-bottom: 5px;*/
+    margin: 0px 0px 5px 5px;
+    border-radius: 10px;
+    padding: 10px;
+}
+.review-comment{
+    border:1px solid black;
+    width: 400px;
+    height: 30px;
+    /*margin: 5px;*/
+    margin: 5px 0px 0px 5px;
+    padding: 2px 10px 2px 10px;
+    border-radius: 10px;
+}
+.review-img{
+    width: 150px;
+    height: 150px;
+    border:1px solid black;
+    border-radius: 10px;
 }
