--- a/src/main/resources/templates/user/detail/jjimList.html
+++ b/src/main/resources/templates/user/detail/jjimList.html
@@ -1,10 +1,8 @@
-
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="userDetailContainer rounded-3">
-
-<div>
-
-
-    <table class="table table-hover">
+    <div>
+        <table class="table table-hover">
         <thead>
         <tr>
             <td>번호</td>
@@ -21,10 +19,14 @@
         <tr th:each="jjim : ${jjim}">
             <th:block th:if="${jjim.jjStatus.equals('공개')}">
                 <td th:text="${jjim.listNum}"></td>
-                <td th:text="${jjim.storeName}"></td>
+                <td>
+                    <a th:href="@{'/store/{storeNum}/detail.do'(storeNum=${jjim.storeNum})}" th:text="${jjim.storeName}"></a>
+                </td>
                 <td th:text="${jjim.address}"></td>
             </th:block>
         </tr>
         </tbody>
-    </table>
+        </table>
+    </div>
 </div>
+</html>
