--- a/src/main/resources/templates/user/detail/reviewList.html
+++ b/src/main/resources/templates/user/detail/reviewList.html
@@ -1,39 +1,47 @@
-<div class="userDetailContainer rounded-3">
-    <h1>테스트 3번</h1>
-    <p>리뷰작성 리스트</p>
-    <p>필요 카트 내부 항목 리스트</p>
-    <span>1.가게 프사 이미지</span> <span>2.가게 이름</span> <span>3.가게 뱃지</span>
-    <span>4.가게 평점</span> <span>5.좋아요</span> <span>6.리뷰 이미지</span>
-    <span>7. 리뷰 코멘트</span> <span>8.메뉴 한줄명</span>
-    <div th:each="reviewed : ${reviewed}">
-        <p th:text="${reviewed}"></p>
-    </div>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<div class="userDetailContainer rounded-3" >
+<!--    <h1>테스트 3번</h1>-->
+<!--    <p>리뷰작성 리스트</p>-->
+<!--    <p>필요 카트 내부 항목 리스트</p>-->
+<!--    <span>1.가게 프사 이미지</span> <span>2.가게 이름</span> <span>3.가게 뱃지</span>-->
+<!--    <span>4.가게 평점</span> <span>5.좋아요</span> <span>6.리뷰 이미지</span>-->
+<!--    <span>7. 리뷰 코멘트</span> <span>8.메뉴 한줄명</span>-->
+<!--    <div th:each="reviewed : ${reviewed}">-->
+<!--        <p th:text="${reviewed}"></p>-->
+<!--    </div>-->
 
-    <div class="reviewCard" style="border: 1px solid black;" th:each="reviewed2 : ${reviewed}">
-        <div class="reviewCard-top d-flex">
-            <div class="storeProfileimgBox" style="border: 1px solid black;width: 50px; height: 50px; border-radius:25px; overflow: hidden;" >
-                <img th:src="${reviewed2.mainImg}" alt="가게 프사">
-            </div>
-            <div>
-                <div>
-                    <a th:text="${reviewed2.storeName}" th:href="@{'/store/{storeNum}/detail.do'(storeNum=${reviewed2.storeNum})}"></a>
-                    <span>평점</span>
-                    <span>따봉맨</span>
+    <div class="card mb-2" th:each="reviewed2 : ${reviewed}">
+<!--        더보기 추가 가능성-->
+<!-- 참고 : <div class="card" th:classappend="${iter.index >= 3} ? 'hide' : ''"></div>-->
+<!--        리뷰 카드 헤더 부분-->
+        <div class="card-header d-flex justify-content-between">
+            <div class="d-flex"><!--헤더 왼쪽-->
+                <div class="d-flex img-containerbox2"><!--가게 이미지-->
+                    <a th:href="@{'/store/{storeNum}/detail.do'(storeNum=${reviewed2.storeNum})}">
+                        <img th:src="${reviewed2.mainImg}" alt="가게 프사">
+                    </a>
                 </div>
-                <div>뱃지</div>
+                <div class="d-flex flex-column"><!--가게 이름-->
+                    <a class="store-name" th:text="${reviewed2.storeName}" th:href="@{'/store/{storeNum}/detail.do'(storeNum=${reviewed2.storeNum})}"></a>
+                    <span th:text="${#dates.format(reviewed2.date,'yyyy-MM-dd')}"></span>
+                </div>
+            </div>
+            <div class="d-flex"><!--헤더 오른쪽-->
+                <span class="starRating" th:text="'★'+${reviewed2.star}+'/5'"></span>
+                <i class="bi bi-hand-thumbs-up"></i>
+                <i class="bi bi-hand-thumbs-down"></i>
             </div>
         </div>
-
-        <div class="reviewCard-bottom d-flex">
-            <div class="reviewimgBox" style="border: 1px solid black; height: 150px; width: 150px;">
-                <img src="" alt="리뷰 사진" >
+<!--        리뷰 카드 바디 부분-->
+        <div class="card-body d-flex justify-content-center" style="background-color: #FFE3A9">
+            <img class="review-img" src="..." alt="리뷰 이미지">
+            <div class="d-flex flex-column justify-content-evenly">
+                <span class="review-text" th:text="${reviewed2.content}"></span>
+                <span class="review-comment" th:text="${reviewed2.comment}"></span>
             </div>
 
-            <div class="d-flex flex-column" style="width: 500px">
-                <span style="height: 100px; border: 1px solid black;" th:text="${reviewed2.content}">리뷰내용</span>
-                <span style="height: 50px; border: 1px solid black;" th:text="${reviewed2.comment}">메뉴 코멘트</span>
-            </div>
         </div>
     </div>
-
 </div>
+</html>
