--- a/src/main/resources/templates/user/detail/waitingList.html
+++ b/src/main/resources/templates/user/detail/waitingList.html
@@ -1,9 +1,8 @@
-
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="userDetailContainer rounded-3">
-
-<div>
-
-    <table class="table table-hover">
+    <div>
+        <table class="table table-hover">
         <thead>
         <tr>
             <td>번호</td>
@@ -25,6 +24,7 @@
                 <td colspan="2" th:text="${visited.visitedDate}"></td>
             </tr>
         </tbody>
-    </table>
-
+        </table>
+    </div>
 </div>
+</html>
