--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <div layout:fragment="content">
-    <form class="mx-auto" action="/user/login.do" method="post" style="width: 450px;">
+    <form class="mx-auto" action="/user/login.do" method="post" style="width: 450px; display: flex; flex-direction: column; justify-content: center">
         <img src="/public/img/black_chap.png" alt="" class="image_logo img-responsive center-block"/>
         <!--외부 박스-->
-        <div class="container-sm box d-flex justify-content-center">
+        <div class="container-sm box " style="display: flex; flex-direction: column; justify-content: center">
             <!--아이디 박스-->
             <div class="form-outline box_login">
                 <input type="text" id="form3Example3" class="form-control form-control-lg"
@@ -20,24 +20,24 @@
                 <label class="form-label" for="form3Example3"></label>
             </div>
             <!--비밀번호 박스-->
-            <div class="form-outline fixed-bottom box_pw container-sm">
+            <div class="form-outline box_pw">
                 <input type="password" id="form3Example4" class="form-control form-control-lg"
                        placeholder="비밀번호" name="pw" value=""/>
                 <label class="form-label" for="form3Example4"></label>
             </div>
-            <div class="fixed-bottom box_check container-sm">
+            <div class="box_check">
                 <!-- Checkbox -->
-                <div class="form-check mb-0">
-                    <input class="form-check-input me-2" type="checkbox" name="autoLogin" value="1" id="autoLogin" />
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" name="autoLogin" value="1" id="autoLogin" />
                     <label class="form-check-label" for="autoLogin">
                         로그인 상태 유지
                     </label>
                 </div>
             </div>
         </div>
-        <div class="form-outline row" >
+        <div class="form-outline" >
           <button class="button_login btn btn-lg float-end">로그인</button>
-        <p class="text-end container-sm login_list">
+        <p class="text-end login_list">
             <a style="opacity: 30%; font-size: 18px" class="list" href="/user/findPw.do">
                 비밀번호 찾기 |&nbsp;
             </a>
@@ -49,9 +49,9 @@
             </a>
         </p>
 
-         <a type="button" class="kakaoBox" id="naverIdLogin">
-             <p class="bi bi-chat-fill kakaoText">&nbsp 네이버로 간편 로그인</p>
-         </a>
+            <a type="button" class="kakaoBox" id="naverIdLogin">
+                <p class="bi bi-chat-fill kakaoText">&nbsp 네이버로 간편 로그인</p>
+            </a>
       </div>
     </form>
 
@@ -65,43 +65,42 @@
         height: 15rem;
         border-radius: 5%;
         /*화면 가운데 오게 하기*/
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1;
+        margin-top: 17rem;
+        margin-left: -5rem;
+
     }
 
     .box_login {
-        width: 30rem;
-        margin-top: 4rem;
+        width: 31.5rem;
+        margin-top: 2.5rem;
+        margin-left: 3rem;
     }
     .box_pw{
         width: 31.5rem;
-        margin-bottom: 3rem;
+        margin-left: 3rem;
+        margin-top: -1rem;
     }
 
     .box_check {
-        margin-left: 4.5rem;
-        margin-bottom: 2.5rem;
+        margin-top: -1rem;
+        margin-left: 3rem;
     }
     .button_login{
         background-color: #FFDD98;
         color: #FF8C8C;
         width: 30rem;
         height: 3rem;
-        /*margin-bottom: 17rem;*/
-        position :fixed;
-        bottom: 30%;
+        margin-top: 1rem;
+        margin-right: -2rem;
+
     }
     .button_login:hover{
         background-color:#FFE7B6;
         color: #FFA4A4;
     }
     .login_list {
-        position: fixed;
-        bottom: 23%;
-        right: 44rem;
+        margin-top: 4rem;
+        margin-right: 4.5rem;
     }
     .list {
         color: #2c3034;
@@ -116,12 +115,9 @@
         width: 28rem;
         border: 1px none;
         text-align: center;
-        position: fixed;
-        top: 82%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1;
-        background-color: #FFE15D;
+        margin-top: 1rem;
+        margin-left:1rem;
+        background-color: #03C75A;
         color: black;
         text-decoration: none;
     }
