--- a/src/main/resources/templates/store/list.html
+++ b/src/main/resources/templates/store/list.html
@@ -78,7 +78,7 @@
                     <div class="mb-2 d-flex" style="width: 90%;">
                         <div class="dropdown" style="width: 100%;">
                             <button class="btn btn-outline-secondary dropdown-toggle btn-sm" style="width: 100%; height:30px;" type="button" id="detailedArea" data-bs-toggle="dropdown" aria-expanded="false">
-                                상세 지역
+                                상세 지역(미구현)
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="detailedArea">
                                 <li><a class="dropdown-item" href="#">지역 1</a></li>
@@ -105,7 +105,7 @@
                 <div class="d-flex flex-column justify-content-center align-items-center" style="flex: 1;">
                     <h5>정렬</h5>
                     <div class="d-flex flex-column" name="order">
-                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 mt-0" id="distance" th:onclick="setOrder('distance', [[${param.direct!=null?param.direct[0]:''}]] )" style="height: 30px;">거리순<i class="bi bi-arrow-down-up"></i></button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 mt-0" id="distance" th:onclick="setOrder('distance', [[${param.direct!=null?param.direct[0]:''}]] )" style="height: 30px;">거리순X<i class="bi bi-arrow-down-up"></i></button>
                         <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="averageStar" th:onclick="setOrder('averageStar', [[${param.direct!=null?param.direct[0]:''}]] )" style="height: 30px;">별점순<i class="bi bi-arrow-down-up"></i></button>
                         <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1 pe-1 ps-1" id="review_count" th:onclick="setOrder('review_count', [[${param.direct!=null?param.direct[0]:''}]] )" style="height: 30px;">리뷰개수순<i class="bi bi-arrow-down-up"></i></button>
                         <button type="button" class="btn btn-outline-secondary btn-sm p-0 m-1" id="jjim_count" th:onclick="setOrder('jjim_count', [[${param.direct!=null?param.direct[0]:''}]] )" style="height: 30px;">찜순<i class="bi bi-arrow-down-up"></i></button>
