--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-left: 5px; margin-top: 10px">
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link" href="/board/list.do" style="font-size: 25px;margin-top: 10px">
+          <a class="nav-link" href="/store/list.do" style="font-size: 25px;margin-top: 10px">
             <strong>Chap List</strong>
           </a>
         </li>
