--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -231,12 +231,10 @@
 
     <div class="mx-auto">
         <h1 class="text-lg-center text-center" style="margin-top: 200px">오늘의 베스트 맛집</h1>
-        <form action="">
-
-
+        <form action="./searchStore.do" method="post" name="searchStoreForm">
             <div class="d-flex justify-content-center mt-5">
                 <div class="search_box me-3">
-                    <select class="form-select border-warning" name="" onchange="categoryChange2(this)">
+                    <select class="form-select border-warning" name="siAddress" onchange="categoryChange2(this)">
                         <option value>시/도 선택</option>
                         <option value="general01">강원</option>
                         <option value="general02">경기</option>
@@ -258,7 +256,7 @@
                 </div>
 
                 <div class="search_box mx ms-3">
-                    <select class="form-select border-warning" name="" id="state2">
+                    <select class="form-select border-warning" name="guAddress" id="state2">
                         <option>군/구 선택</option>
                     </select>
                 </div>
@@ -331,7 +329,7 @@
                     }
                 </script>
 
-                <button type="button" class="btn btn-warning ms-3">검색</button>
+                <button type="submit" class="btn btn-warning ms-3" >검색</button>
             </div>
         </form>
     </div>
@@ -343,9 +341,8 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title" th:text="${store.storeName}">Card title</h5>
+                    <p class="card-text">맛집 이 나와야 해 !!!!!!!</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
